2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `extensions'.
	(Automake): Pass a hash to `&register_language' instead of a
	list of pseudo assignments.
	(&register_language): Adjust.
	(&finish_languages): Initialize `$ltoutarg'.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `output_arg'.
	(%language_map): Remove.
	(&register_language): Build only the object, and store in
	%languages only.
	(&finish_languages, &handle_single_transform_list): Adjust.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attributes `flags', `compile' and
	`compiler'.
	(&finish_languages, &handle_single_transform_list, &handle_dist)
	(&add_depend2, &register_language): Use them and the `linker' and
	`pure' attributes.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_single_transform_list, &finish_languages)
	(&handle_dist, &handle_dependencies): Use the language object for
	autodep and derived-autodep too.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Ignore Automake definition for
	($var, $cond) if there is already a user definition for ($var, $cond).

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_texinfo_file): Catch @cindex and the like,
	but also @deffn and so on which push data in indexes.
	Reported by Derek R. Price.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): New package, temporarily in this file.
	Use Class::Struct.
	(Automake): New package.
	(%languages): New.
	(&handle_single_transform_list): Use the language object's `ansi'
	attribute instead of `$language_map{"$lang-ansi-p"}'.
	(&register_language): Build and register the language too.

2001-04-11  Tom Tromey  <tromey@redhat.com>

	Fixes report from Larry Jones:
	* automake.in (handle_dependencies): Add `@_am_quote@' where
	appropriate.
	* m4/make.m4 (AM_MAKE_INCLUDE): Handle BSD-style make.
